Fixed footer css on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5866,6 +5866,12 @@ footer {
 .copyright {
   padding: 30px 15px 0px; }
 
+@media (max-width: 992px) {
+  footer {
+    text-align: center; }
+  .fiec-footer img {
+    width: 75%; } }
+
 #home {
   margin-top: 20px;
   margin-bottom: 0px; }
